fix: allow google-tag-manager-plugin 1.1+

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "sylius-plugin"
     ],
     "require": {
-        "stefandoorn/google-tag-manager-plugin": "~1.0"
+        "stefandoorn/google-tag-manager-plugin": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
